# reitorly

./: .dockerignore  .env  Dockerfile  Dockerfile.backup  LICENSE  README.md  docker-compose.yml  dockerfile  dockerfile_dev.backup  makefile  pyproject.toml
.github/workflows/: ci-cd.yml  validate-sql.yml
docs/: architecture.md  asset_mgmnt.md  dockerfile.md  make.md  project_container.md  requirements  requirements.md
models/schema/migrations/: 001_sqlite_create_tables.sql
src/: setup.py
src/app/: app.py  dashboard.py  graph.html  helloworld.py  helloworld1.py  helloworld2.py
src/models/sqlite/schema/migrations/: 001_create_sqlite_tables.sql
